root: general compatibility fixes with mac

--- a/app.json
+++ b/app.json
@@ -9,5 +9,6 @@
   "showInlineTitle": false,
   "propertiesInDocument": "source",
   "alwaysUpdateLinks": true,
-  "promptDelete": false
+  "promptDelete": false,
+  "showUnsupportedFiles": true
 }
